--- a/package.json
+++ b/package.json
@@ -12,18 +12,18 @@
 		"commit": "git pull && bun run vercel && bun mylint && read -p 'Descriptions Commit: ' message && git add . && echo -n \"$message - \" && node getTime.js | xargs -I {} git commit -m \"$message - {}\" && git push"
 	},
 	"dependencies": {
-		"firebase": "^11.8.1",
-		"next": "15.3.2",
+		"firebase": "^11.10.0",
+		"next": "^16.0.7",
 		"next-pwa": "^5.6.0",
-		"react": "^19.1.0",
-		"react-dom": "^19.1.0",
-		"styled-components": "^6.1.18"
+		"react": "^19.2.1",
+		"react-dom": "^19.2.1",
+		"styled-components": "^6.1.19"
 	},
 	"devDependencies": {
-		"@biomejs/biome": "^2.1.1",
-		"@types/node": "^20.17.50",
-		"@types/react": "^19.1.5",
-		"@types/react-dom": "^19.1.5",
-		"typescript": "^5.8.3"
+		"@biomejs/biome": "^2.3.8",
+		"@types/node": "^20.19.25",
+		"@types/react": "^19.2.7",
+		"@types/react-dom": "^19.2.3",
+		"typescript": "^5.9.3"
 	}
 }
